maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
}

def keepHandOnSideWall(){
  if (isFacingWall()){
    righ()
  }
  else{
    while(!isFacingWall()){
      right()
    }
    right()
      }
  forward()
}